--- a/swagger-spec/nodes/draft_registrations_list.yaml
+++ b/swagger-spec/nodes/draft_registrations_list.yaml
@@ -1,1 +1,135 @@
-# /nodes/{node_id}/draft_registrations/
+get:
+  summary: List all draft registrations
+  description: >-
+    A paginated list of all of the draft registrations of a given node.
+
+
+    Draft registrations contain the supplemental registration questions that accompany a registration.
+    A registration is a frozen version of the project that can never be edited or deleted, but can be withdrawn.
+
+
+    Your original project remains editable but will now have the draft registration linked to it.
+
+    #### Permissions
+
+    Users must have admin permission on the node in order to view draft registrations.
+
+    #### Returns
+
+    Returns JSON with a `data` and `links` property.
+
+
+    The `data` property contains an array of 10 draft registrations.
+    Each resource in the array is a separate draft registration object and contains the full representation of the draft registration,
+    meaning additional requests to a draft registration's detail view are not necessary.
+
+
+    The `links` property contains a dictionary of links that can be used
+    for [pagination](http://jsonapi.org/format/1.0/#fetching-pagination).
+
+  parameters:
+    - in: path
+      type: string
+      name: node_id
+      required: true
+      description: 'The unique identifier of the node.'
+  tags:
+    - Nodes
+  operationId: nodes_draft_registrations_list
+  x-response-schema: Draft Registration
+  responses:
+    '200':
+      description: 'OK'
+      schema:
+        type: array
+        items:
+          $ref: draft_registration_definition.yaml
+      examples:
+        application/json:
+          data:
+          - id: ''
+            type: 'draft_registrations'
+            attributes:
+              datetime_initiated: ''
+              datetime_updated: ''
+              registration_metadata: {}
+              registration_supplement: ''
+            relationships:
+              branched_from:
+                links:
+                  related:
+                    href: ''
+                    meta: {}
+              initiator:
+                links:
+                  related:
+                    href: ''
+                    meta: {}
+              registration_schema:
+                links:
+                  related:
+                    href: ''
+                    meta: {}
+            links:
+              html: ''
+          links:
+            first: ''
+            last: ''
+            prev: ''
+            next: ''
+            meta:
+              total: ''
+              per_page: 10
+
+post:
+  summary: Create a draft registration
+  description: >-
+    Initiate a draft registration of the current node.
+
+    Draft registrations contain the supplemental registration questions that accompany a registration.
+    A registration is a frozen version of the project that can never be edited or deleted, but can be withdrawn.
+
+
+    Your original project remains editable but will now have the draft registration linked to it.
+
+    #### Permissions
+
+    Users must have admin permission on the node in order to create draft registrations.
+
+    #### Required
+
+    Required fields for creating a draft registration include:
+
+
+    &nbsp;&nbsp;&nbsp;&nbsp`registration_supplement`
+
+    #### Returns
+
+    Returns a dictionary with a `data` property containing the representation of the created
+    draft registration, if the request is successful.
+
+
+    If the request is unsuccessful, a dictionary with an `errors` property containing
+    information about the failure will be returned. Refer to the [list of error codes]()
+    to understand why this request may have failed.
+
+  parameters:
+    - in: path
+      type: string
+      name: node_id
+      required: true
+      description: 'The unique identifier of the node.'
+    - in: body
+      name: body
+      required: true
+      schema:
+        $ref: draft_registration_definition.yaml
+  tags:
+    - Nodes
+  operationId: nodes_draft_registrations_create
+  x-response-schema: Draft Registration
+  consumes:
+    - application/json
+  responses:
+    '201':
+      description: 'Created'
