--- a/swagger-spec/nodes/contributor_detail.yaml
+++ b/swagger-spec/nodes/contributor_detail.yaml
@@ -7,7 +7,7 @@ get:
     Contributors are users who can make changes to the node or, in the case of private nodes, have read access to the node.
 
 
-    Contributors are categorized as either "bibliographic" or "non-bibliographic" contributors.
+    Contributors are categorized as either "bibliographic" or "non-bibliographic".
     From a permissions standpoint, both are the same, but bibliographic contributors are included in citations and are listed on the project overview page on the OSF, while non-bibliographic contributors are not.
 
     #### Returns
@@ -109,6 +109,10 @@ patch:
     Contributors can be updated with either a **PUT** or **PATCH** request.
     Since this endpoint has no mandatory attributes, PUT and PATCH are functionally the same.
 
+    #### Permissions
+
+    Only project administrators can update the contributors on a node.
+
     #### Returns
 
     Returns a dictionary with a `data` property containing the new representation of the updated
@@ -156,11 +160,11 @@ delete:
     This request only removes the relationship between the node and the user, it does not delete the user itself.
 
 
-    Only project administrators have permission to remove project contributors.
+    A node must always have at least one admin, and attempting to remove the only admin from a node will result in a **400 Bad Request** response.
 
+    #### Permissions
 
-    A node must always have at least one admin, and attempting to remove the only admin from a node will result in a 400 Bad Request response.
-
+    A user can remove themselves as a node contributor. Otherwise, only project administrators can remove contributors.
 
     #### Returns
 
