--- a/swagger-spec/nodes/detail.yaml
+++ b/swagger-spec/nodes/detail.yaml
@@ -3,9 +3,10 @@ get:
   description: >-
     Retrieves the details of a given node (project or component).
 
+    #### Permissions
 
-    Only project contributors have permission to retrieve the details of a private node.
-    Attempting to retreive a node for which you are not a contributor will result in a **403 Forbidden** response.
+    Only project contributors may retrieve the details of a private node.
+    Attempting to retreive a private node for which you are not a contributor will result in a **403 Forbidden** response.
 
 
     Authentication is not required to view the details of a public node, as public nodes give read-only access to everyone.
@@ -168,6 +169,11 @@ patch:
     Nodes can be updated with either a **PUT** or **PATCH** request.
     The `title` and `category` fields are mandatory in a **PUT** request, and optional in a **PATCH**.
 
+    #### Permissions
+
+    Only write contributors may update a node.
+    Attempting to update a node for which you do not have write access will result in a **403 Forbidden** response.
+
     #### Returns
 
     Returns a dictionary with a `data` property containing the new representation of the updated
@@ -216,10 +222,10 @@ delete:
 
     Permanently deletes a node. This action cannot be undone.
 
+    #### Permissions
 
-    Only project administrators have permission to delete a node.
+    Only project administrators may delete a node.
     Attempting to delete a node for which you are not an administrator will result in a **403 Forbidden** response.
-
 
     #### Returns
 
