--- a/swagger-spec/nodes/contributors_list.yaml
+++ b/swagger-spec/nodes/contributors_list.yaml
@@ -7,7 +7,7 @@ get:
     Contributors are users who can make changes to the node or, in the case of private nodes, have read access to the node.
 
 
-    Contributors are categorized as either "bibliographic" or "non-bibliographic" contributors.
+    Contributors are categorized as either "bibliographic" or "non-bibliographic".
     From a permissions standpoint, both are the same, but bibliographic contributors are included in citations and are listed on the project overview page on the OSF, while non-bibliographic contributors are not.
 
 
@@ -132,6 +132,10 @@ post:
 
     Contributors are categorized as either "bibliographic" or "non-bibliographic" contributors.
     From a permissions standpoint, both are the same, but bibliographic contributors are included in citations and are listed on the project overview page on the OSF, while non-bibliographic contributors are not.
+
+    #### Permissions
+
+    Only project administrators can add contributors to a node.
 
     #### Required
 
