--- a/swagger-spec/registrations/definition.yaml
+++ b/swagger-spec/registrations/definition.yaml
@@ -1,5 +1,11 @@
 type: object
 title: Registration
+required:
+  - id
+  - type
+  - attributes
+  - relationships
+  - links
 properties:
   id:
     type: string
@@ -11,6 +17,7 @@ properties:
     description: 'The type identifier of the registration entity (`registrations`).'
   attributes:
     type: object
+    title: Attributes
     readOnly: true
     description: 'The properties of the registration entity.'
     properties:
@@ -28,11 +35,7 @@ properties:
           - project
           - software
           - other
-        description: 'The category of the registration, as selected by project contributors.'
-      title:
-        type: string
-        readOnly: true
-        description: 'The title of the registration.'
+        description: 'The category of the registered node.'
       collection:
         type: boolean
         readOnly: true
@@ -51,53 +54,92 @@ properties:
         type: string
         format: date-time
         readOnly: true
-        description: 'The time at which the registration was created, as an iso8601 formatted timestamp.'
+        description: 'The time at which the registered node was created, as an iso8601 formatted timestamp.'
       date_modified:
         type: string
         format: date-time
         readOnly: true
-        description: 'The time at which the registration was last modified, as an iso8601 formatted timestamp.'
+        description: 'The time at which the registered node was last modified, as an iso8601 formatted timestamp.'
+      date_registered:
+        type: string
+        format: date-time
+        readOnly: true
+        description: 'The time at which this registration was created, as an iso8601 formatted timestamp.'
       description:
         type: string
         readOnly: true
-        description: 'The description of the registration.'
+        description: 'The description of the registered node.'
+      embargo_end_date:
+        type: string
+        format: date-time
+        readOnly: true
+        description: 'The time at which the embargo on this registration will be lifted and the registration will become public, as an iso8601 formatted timestamp.'
       fork:
         type: boolean
         readOnly: true
         description: 'Whether or not this registration represents a fork of another node.'
-      forked_date:
-        type: string
-        format: date-time
-        readOnly: true
-        description: 'If this node is a fork of another node, the time at which the node was created, as an iso8601 formatted timestamp.'
       node_license:
         type: string
         readOnly: true
-        description: 'A dictionary containing the metadata (copyright year and holder) associated with the node license (required for certain license types).'
+        description: 'A dictionary containing the metadata (copyright year and holder) associated with the registered node license (required for certain license types).'
+      pending_embargo_approval:
+        type: boolean
+        readOnly: true
+        description: 'Whether or not the embargo associated with this registration is pending approval from project administrators.'
+      pending_registration_approval:
+        type: boolean
+        readOnly: true
+        description: 'Whether or not the registration is pending approval from project administrators.'
+      pending_withdrawal:
+        type: boolean
+        readOnly: true
+        description: 'Whether or not the registration is pending approval for withdrawal from project administrators.'
       preprint:
         type: boolean
         readOnly: true
         description: 'Whether or not a preprint has been created from this node, or if this node was created for a preprint.'
       public:
         type: boolean
-        readOnly: true
-        description: 'Whether or not the node is publicly visible. This field is only editable by project administrators.'
+        readOnly: false
+        description: 'Whether or not the registration is publicly visible.'
       registration:
         type: boolean
         readOnly: true
-        description: 'Whether or not the node represents a registration. This value should always be `false`. This field may be deprecated in future versions.'
+        description: 'Whether or not this is a registration. This value should always be `true`. This field may be deprecated in future versions.'
+      registered_meta:
+        type: string
+        readOnly: true
+        description: 'A dictionary with supplemental registration questions and responses.'
+      registration_supplement:
+        type: string
+        readOnly: true
+        description: 'The title of the registration schema this registration conforms to.'
       tags:
         type: array
         items:
           type: string
         readOnly: true
-        description: 'A list of strings that describe this node, as entered by project contributors.'
+        description: 'A list of strings that describe the registered node.'
       template_from:
         type: string
-        readOnly: true 
-        description: 'The unique ID of the node from which this node was templated, if this node was created from a template.'
+        readOnly: true
+        description: 'The unique ID of the node from which the registered node was templated, if the registered node was created from a template.'
+      title:
+        type: string
+        readOnly: true
+        description: 'The title of the registered node.'
+      withdrawn:
+        type: boolean
+        readOnly: true
+        description: 'Whether or not this registration has been withdrawn.'
+      withdrawal_justification:
+        type: string
+        readOnly: true
+        description: 'The reasoning for why this registration was withdrawn, as entered by the administrator that initiated the withdrawal.'
+
   relationships:
     type: object
+    title: Relationships
     readOnly: true
     description: 'URLs to other entities or entity collections that have a relationship to the registration entity.'
     properties:
@@ -108,7 +150,7 @@ properties:
       children:
         type: string
         readOnly: true
-        description: 'A link to the list of this registration''s children (components).'
+        description: 'A link to the list of the registered node''s children (components).'
       citation:
         type: string
         readOnly: true
@@ -145,10 +187,18 @@ properties:
         type: string
         readOnly: true
         description: 'A link to the node that is the direct parent of the current registration, if the current registration is a child registration.'
+      registered_by:
+        type: string
+        readOnly: true
+        description: 'A link to the user that initiated this registration.'
       registered_from:
         type: string
         readOnly: true
         description: 'A link to the node that this registration was registered from.'
+      registration_schema:
+        type: string
+        readOnly: true
+        description: 'A link to the metaschema that this registration conforms to.'
       root:
         type: string
         readOnly: true
@@ -161,8 +211,10 @@ properties:
         type: string
         readOnly: true
         description: 'A link to the list of wiki pages for this registration.'
+
   links:
     type: object
+    title: Links
     readOnly: true
     description: 'URLs to alternative representations of the registrations entity.'
     properties:
