--- a/swagger-spec/view_only_links/nodes.yaml
+++ b/swagger-spec/view_only_links/nodes.yaml
@@ -1,1 +1,180 @@
-# /view_only_links/{link_id}/nodes/
+get:
+  summary: List all nodes
+  description: >-
+
+    A list of nodes associated with the View Only Link.
+
+    #### Permissions
+
+    This requires admin permissions on all nodes to be associated with this view only link.
+
+    #### Returns
+
+    Returns a JSON object containing `data` and `links` keys.
+
+    The `data` key contains an array of 10 nodes.
+    Each resource in the array is a separate node object and contains the full representation of the node, meaning additional requests to a node's detail view are not necessary.
+
+
+    The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
+
+
+    This request should never return an error.
+
+    #### Filtering
+
+    You can optionally request that the response only include nodes that match your filters by utilizing the `filter` query parameter, e.g.
+    https://api.osf.io/v2/nodes/?filter[title]=reproducibility.
+
+
+    Nodes may be filtered by their `id`, `title`, `category`, `description`, `public`, `tags`, `date_created`, `date_modified`, `root`, `parent`, `preprint`, and `contributors`.
+
+
+    Most fields are string fields and will be filtered using simple substring matching.
+    Public and preprint are boolean fields, and can be filtered using truthy values, such as **true**, **false**, **0** or **1**.
+    Note that quoting true or false in the query will cause the match to fail.
+
+  parameters:
+    - in: path
+      type: string
+      name: link_id
+      required: true
+      description: 'The unique identifier of the view only link.'
+
+  tags:
+    - View Only Links
+  operationId: view_only_links_node_list
+  x-response-schema: Node
+  responses:
+    '200':
+      description: OK
+      schema:
+        type: array
+        items:
+          $ref: '../nodes/definition.yaml'
+      examples:
+        application/json:
+            data:
+            - relationships:
+                files:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/files/
+                      meta: {}
+                view_only_links:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/view_only_links/
+                      meta: {}
+                citation:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/citation/
+                      meta: {}
+                draft_registrations:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/draft_registrations/
+                      meta: {}
+                contributors:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/contributors/
+                      meta: {}
+                forks:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/forks/
+                      meta: {}
+                root:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/
+                      meta: {}
+                identifiers:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/identifiers/
+                      meta: {}
+                comments:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/comments/?filter%5Btarget%5D=gaz5n
+                      meta: {}
+                registrations:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/registrations/
+                      meta: {}
+                node_links:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/node_links/
+                      meta: {}
+                linked_nodes:
+                  links:
+                    self:
+                      href: http://api.osf.io/v2/nodes/gaz5n/relationships/linked_nodes/
+                      meta: {}
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/linked_nodes/
+                      meta: {}
+                wikis:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/wikis/
+                      meta: {}
+                affiliated_institutions:
+                  links:
+                    self:
+                      href: http://api.osf.io/v2/nodes/gaz5n/relationships/institutions/
+                      meta: {}
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/institutions/
+                      meta: {}
+                children:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/children/
+                      meta: {}
+                preprints:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/preprints/
+                      meta: {}
+                logs:
+                  links:
+                    related:
+                      href: http://api.osf.io/v2/nodes/gaz5n/logs/
+                      meta: {}
+              links:
+                self: http://api.osf.io/v2/nodes/gaz5n/
+                html: http://osf.io/gaz5n/
+              attributes:
+                category: project
+                fork: false
+                preprint: false
+                description: 'Project description'
+                current_user_permissions:
+                - read
+                - write
+                - admin
+                date_modified: '2017-03-20T20:13:30.599144'
+                title: 'Fantastic project title'
+                collection: false
+                registration: false
+                date_created: '2017-03-20T20:12:17.002426'
+                current_user_can_comment: true
+                node_license:
+                public: false
+                tags: []
+              type: nodes
+              id: gaz5n
+            links:
+              first:
+              last:
+              prev:
+              next:
+              meta:
+                total: 1
+                per_page: 10
